--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2682,107 +2682,107 @@ stories:
   domain: http://www.madison-press.com/
   link: https://www.madison-press.com/news/local/278112/xenikis-sworn-in-as-commissioner
 images:
-- name: miamibeach-miamibeach-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-rain.jpg
-- name: aws-s3-stories-gypsy-eyes-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gypsy-eyes-blue-circuit.jpg
-- name: old-school-house-old-schoolhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
-- name: death-valley-death-valley-national-park-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alberto-giacometti.jpg
-- name: gears-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-aqua.jpg
-- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-- name: nazi-invasion-DSC_0020.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
-- name: adam-smith-adam-smith-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
-- name: old-gas-pumps-oldgaspumps-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-green-zuma.jpg
-- name: crow-crow-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
-- name: old-barn-old-barn-1500-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-aqua.jpg
-- name: flower-barbed-wire-flower-barbed-wire-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-umberto-bocc.jpg
-- name: beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
-- name: beach-rocks-beach-rocks-currents-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sunday.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
-- name: meadowbutterfly-meadow-butterfly-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-marcel-duchamp.jpg
-- name: aws-s3-stories-castle-on-hill-edinburgh-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-copper-circuit.JPG
-- name: containership-containership-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-soul.jpg
-- name: lincoln-memorial-lincolnmemorial-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-attack-planes.jpg
-- name: birdhouse-birdhouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-mucha-mult.jpg
-- name: oldhotel-oldhotel-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-electricity.jpg
-- name: stories-castle-wall-circuits.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-wall-circuits.JPG
-- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
-- name: oldcabin-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
-- name: scream-DSC_0089.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0089.jpg
-- name: trucksilo-trucksilo-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-oily-mcoilface.jpg
-- name: downtheline-downtheline-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
-- name: store-on-corner-oldcabin-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-kandinsky-bv.jpg
-- name: mosaic-face-mosaic-face-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-far-away.jpg
-- name: downtheline-downtheline-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-internet-numbers.jpg
-- name: nyc-flag-nycflag-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
-- name: window-window-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-monet-one.jpg
-- name: lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-- name: server-cloud-server-racks-door-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-internet-numbers.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
-- name: white-house-whitehouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
-- name: white-house-lawn-white-house-window-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
-- name: old-church-oldchurch-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-ww2-dresden.jpg
-- name: server-cloud-server-racks-clouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-nazi-poster.jpg
-- name: cargo-ship-cargo-ship-on-sea-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-china-prop.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
-- name: border-crossing-bordercrossing-far-away.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-far-away.png
-- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-- name: container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
-- name: containership-containership-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-light-dali.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-- name: birdhouse-birdhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-green-zuma.jpg
-- name: meadowbutterfly-meadow-butterfly.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly.jpg
-- name: aws-s3-stories-vancouver-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-light-dali.jpg
+- name: bordercrossing-bordercrossing-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-spagetti-accident.jpg
+- name: bordercrossing-bordercrossing-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-blocks.jpg
+- name: nyc-flag-nycflag-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-monet-one.jpg
+- name: status-berlin-status-berlin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-green-zuma.jpg
+- name: amusement-park-amusement-park-2-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purp-paper.jpg
+- name: statue-of-liberty-front-view-statueofliberty-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-diego-rivera1.jpg
+- name: oldhouse-oldhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
+- name: docks-docks-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-marcel-duchamp.jpg
+- name: nyc-flag-nycflag-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-deep-connections.jpg
+- name: blossombar-alien-goggles-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-24-99.jpg
+- name: powerlines-power-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-blocks.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+- name: stories-christianity-under-construction-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-copper-circuit.jpg
+- name: old-door-lock-old-door-lock-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kand-two.jpg
+- name: old-door-lock-old-door-lock-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dry-skin.jpg
+- name: stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
+- name: downtown-los-angeles-downtown-la-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-diego-rivera1.JPG
+- name: meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
+- name: fence-mexico-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sunday.jpg
+- name: white-house-lawn-white-house-lawn-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-rainbow-festival.jpg
+- name: white-house-whitehouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-graham-sutherland.jpg
+- name: gypsy-wagon-gypsywagon-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-electricity.jpg
+- name: oldhouse-oldhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-umberto-bocc.jpg
+- name: windowmountain-window-mountain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-spagetti-accident.jpg
+- name: power-lines-power-lines-empty-space-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-deep-connections.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-atari-missle.jpg
+- name: aws-s3-stories-new-cityscape-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-cityscape-copper-circuit.jpg
+- name: window-window-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
+- name: abe-lincoln-one-yellow-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-07-91.jpg
+- name: locked-up-steam-lock-up-steam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam.jpg
+- name: curtain-curtain-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-monet-one.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
+- name: aws-s3-stories-new-downtheline-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-downtheline-dark-dali.jpg
+- name: window-window-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-cinnamon-rolls.jpg
+- name: old-church-oldchurch-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-electricity.jpg
+- name: trucksilo-trucksilo-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
+- name: abe-lincoln-one-spagetti-accident-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-spagetti-accident-file-00-00-07-91.jpg
+- name: gypsy-wagon-gypsywagon-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-color.jpg
+- name: windowmountain-window-mountain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-alien-goggles.jpg
+- name: oldhouse-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-granite.jpg
+- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
+- name: udnie-IMG_8374.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8374.jpg
+- name: oldbarn-oldbarn-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-diego-rivera1.jpg
+- name: amusement-park-amusement-park-2-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-nazi-poster.jpg
+- name: oldtrain-oldtrain-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-feed-people.jpg
+- name: gypsy-wagon-gypsywagon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon.jpg
+- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
+- name: walled-garden-walled-garden-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
+- name: old-barn-old-barn-1500-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dry-skin.jpg
 ---
 Flooding Hits Louisiana As Residents Brace For Hurricane.&nbsp;Opponents Want Hearing On Dakota Access Pipeline Expansion.&nbsp;New Hampshire Legalizes Sports Betting.&nbsp;Trooper Recruits Hit The Streets.&nbsp;Hong Kong Protests Augur Murky Outlook For Financial Hub.&nbsp;Disco Demolition Night Riot.&nbsp;Apple Says It's Fixing Bug In Walkie Talkie App.&nbsp;Kevin Durant Had Strange Way To Tell Nets He Was Signing With Them.&nbsp;
